--- a/task01/Task01.html
+++ b/task01/Task01.html
@@ -2,9 +2,126 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>任务一：零基础HTML编码</title>
+    <title>任务一：零基础HTML编码，Slash</title>
 </head>
 <body>
-    
+    <h1>网站一级标题</h1>
+    <ul>
+        <li><a href="#">导航链接一</a></li>
+        <li><a href="#">导航链接二</a></li>
+        <li><a href="#">导航链接三</a></li>
+        <li><a href="#">导航链接四</a></li>
+    </ul>
+    <h2>文章一级标题</h2>
+    <h3>文章二级标题</h3>
+    <p>文章作者 文章发表时间</p>
+    <div>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落</div>
+    <div>换行了</div>
+    <div>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落</div>
+    <div>这是一个很长很长的段落，这是一个很长很长的段落，
+    这是一个很长很长的段落，这是一个很长很长的段落，<<a href="https://github.com/SlashChu/IFE-Task">点击这里可以跳转到我的github</a>这是一个很长很长的段落，这是一个很长很长的段落</div>
+    <div><img src="img/1.jpg"></div>
+    <div>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落</div>
+    <div>换行了</div>
+    <div>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落</div>
+    <div>这是一个很长很长的段落，这是一个很长很长的段落，
+    这是一个很长很长的段落，这是一个很长很长的段落，<<a href="https://github.com/SlashChu/IFE-Task">点击这里可以跳转到我的github</a>这是一个很长很长的段落，这是一个很长很长的段落</div>
+    <h2>另一篇文章一级标题</h2>
+    <h3>文章二级标题</h3>
+    <p>文章作者 文章发表时间</p>
+    <div>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落</div>
+    <div>这是一个很长很长的段落，这是一个很长很长的段落，
+    这是一个很长很长的段落，这是一个很长很长的段落，<<a href="https://github.com/SlashChu/IFE-Task">点击这里可以跳转到我的github</a>这是一个很长很长的段落，这是一个很长很长的段落</div>
+    <div><img src="img/1.jpg"></div>
+    <ul>
+        <li>列表项目一</li>
+        <li>列表项目二</li>
+        <li>列表项目三</li>
+    </ul>
+    <h2>图片</h2>
+    <ul>
+        <li>
+          <div>好看的图片</div>
+          <img src="img/2.jpg">
+        </li>
+        <li>
+          <div>好看的图片</div>
+          <img src="img/2.jpg">
+        </li>
+        <li>
+          <div>好看的图片</div>
+          <img src="img/2.jpg">
+        </li>
+        <li>
+          <div>好看的图片</div>
+          <img src="img/2.jpg">
+        </li>
+        <li>
+          <div>好看的图片</div>
+          <img src="img/2.jpg">
+        </li>
+    </ul>
+    <h2>最后一篇文章一级标题</h2>
+    <h3>文章二级标题</h3>
+    <p>文章作者 文章发表时间</p>
+    <ol>
+        <li>排名1</li>
+        <li>排名2</li>
+        <li>排名3</li>
+    </ol>
+    <div>下面是一个表格，给表格加了一个border='1'好让你看出是一个表格</div>
+    <table border="1">
+        <thead>
+            <tr>
+               <td>表头</td>
+               <td>表头</td>
+               <td>表头</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>表内容单元格</td>
+                <td>表内容单元格</td>
+                <td><a href="#">操作</a></td>
+            </tr>
+            <tr>
+                <td>表内容单元格</td>
+                <td>表内容单元格</td>
+                <td><a href="#">操作</a></td>
+            </tr>
+            <tr>
+                <td>表内容单元格</td>
+                <td>表内容单元格</td>
+                <td><a href="#">操作</a></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>总计</td>
+                <td colspan="2">1000</td>
+            </tr>
+        </tfoot>
+    </table>
+    <h2>这里以后是一个侧栏，这是侧栏的标题</h2>
+    <h3>侧栏注册窗口标题</h3>
+
+    <p>请输入邮箱地址：<input type="" name="" placeholder="这是一个文本输入框"></p>
+    <p>邮箱地址请按要求格式输入</p>
+    <p>请输入密码：<input type="" name="" placeholder="这是一个文本输入框">请重复输入密码：<input type="text" placeholder="这是一个文本输入框"></p>
+    <p>密码请为6-16位英文数字</p>
+    <p>
+        性别<input type="radio" name="sex"><label for="sex">男</label>
+            <input type="radio" name='sex'><label for="sex">女</label>
+        城市：<select>
+                <option value="北京">北京</option>
+                <option value="上海">上海</option>
+              </select>
+        爱好：<input type="checkbox" name="sport" id="sport"><label for="sport">运动</label>
+              <input type="checkbox" name="art" id="art"><label for="art">艺术</label>
+              <input type="checkbox" name="science" id='science'><label for="science">科学</label>
+        个人描述：<textarea>这是一个多行输入框，输入您的个人描述</textarea>
+        <input type="button" name="" value="确认提交">
+    </p>
+    <p>版权所有&copy</p>
 </body>
 </html>
