修改了事件的监听方法addEventListener

--- a/task15/task15.html
+++ b/task15/task15.html
@@ -100,12 +100,9 @@ function btnHandle() {
 
 
 function init() {
-  document.getElementById('sort-btn').onclick = function(){
-     btnHandle();
-  }
   // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
-
-}
+  document.getElementById('sort-btn').addEventListener('click',btnHandle);
+} 
 
 init();
 
